Add privacy policy page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p class="eyebrow">Launch page</p>
         <h2 id="closing-title">RiverTrends for iPhone is in development.</h2>
         <p>
-          This page can later be updated with App Store link, screenshots, and a simple privacy policy page.
+          This page can be updated with App Store link, screenshots, and support pages as the app gets closer to launch.
         </p>
         <a class="btn btn-primary" href="mailto:hello@rivertrends.app?subject=RiverTrends%20launch">Reach out</a>
       </div>
@@ -130,6 +130,7 @@
   <footer class="site-footer">
     <p>© <span id="year">2026</span> RiverTrends</p>
     <div class="footer-links">
+      <a href="/privacy">Privacy</a>
       <a href="mailto:hello@rivertrends.app">hello@rivertrends.app</a>
       <a href="https://rivertrends.app/" aria-current="page">rivertrends.app</a>
     </div>
