Refine landing copy and support email

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RiverTrends | Signal-first trending news for iPhone</title>
-  <meta name="description" content="RiverTrends helps you track what matters now with curated Today picks, live momentum stories, and WikiTrends in one clean iPhone app.">
+  <title>RiverTrends | Track trend signals for iPhone</title>
+  <meta name="description" content="RiverTrends helps you follow trending topics and headlines with a clean, fast iPhone reading experience.">
   <meta name="theme-color" content="#071633">
   <meta property="og:title" content="RiverTrends">
-  <meta property="og:description" content="Signal-first trending news for iPhone. Curated Today, Live momentum, and WikiTrends.">
+  <meta property="og:description" content="Track trending topics and headlines in a clean iPhone experience.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://rivertrends.app/">
   <meta property="og:image" content="https://rivertrends.app/assets/app-icon.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="RiverTrends">
-  <meta name="twitter:description" content="Signal-first trending news for iPhone. Curated Today, Live momentum, and WikiTrends.">
+  <meta name="twitter:description" content="Track trending topics and headlines in a clean iPhone experience.">
   <link rel="icon" type="image/png" href="./assets/app-icon.png">
   <link rel="apple-touch-icon" href="./assets/app-icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
       <img src="./assets/brand-mark.png" alt="" width="36" height="36">
       <span>RiverTrends</span>
     </a>
-    <a class="header-link" href="mailto:hello@rivertrends.app">Contact</a>
+    <a class="header-link" href="mailto:support@rivertrends.com">Contact</a>
   </header>
 
   <main>
@@ -39,17 +39,18 @@
         <p class="eyebrow">iPhone app · coming soon</p>
         <h1>Track what the internet is talking about, without the noise.</h1>
         <p class="lede">
-          RiverTrends combines a curated daily edition, a live momentum feed, and Wikipedia trend signals in one clean reading experience.
+          RiverTrends helps you follow what is trending in the news and on the web, with a clean reading experience built for fast scanning.
         </p>
 
         <div class="cta-row">
-          <a class="btn btn-primary" href="mailto:hello@rivertrends.app?subject=RiverTrends%20waitlist">Get Updates</a>
+          <a class="btn btn-primary" href="mailto:support@rivertrends.com?subject=RiverTrends%20updates">Get Updates</a>
           <span class="btn btn-ghost" aria-disabled="true">App Store Link Soon</span>
         </div>
 
         <ul class="bullets" aria-label="Key app highlights">
           <li>No account required</li>
-          <li>Editorial curation + live trends</li>
+          <li>Trend-focused headline feed</li>
+          <li>Automatic alerts for Pro</li>
           <li>Privacy-friendly by design</li>
         </ul>
       </div>
@@ -64,25 +65,25 @@
                 <small>Signal-first feed</small>
               </div>
             </div>
-            <span class="live-pill">LIVE</span>
+            <span class="live-pill">NOW</span>
           </div>
 
           <div class="feed-card feed-card-featured">
-            <p class="feed-label">TODAY</p>
-            <h2>Top 20 curated stories that matter right now</h2>
-            <p class="feed-meta">Published edition · editor-selected</p>
+            <p class="feed-label">TRENDING</p>
+            <h2>Headline trends and topics that are moving right now</h2>
+            <p class="feed-meta">Continuously updated trend signals</p>
           </div>
 
           <div class="feed-grid">
             <article class="feed-card">
-              <p class="feed-label">LIVE</p>
-              <h3>Momentum stories from the last 24h</h3>
-              <p class="feed-meta">Freshness window + score filters</p>
+              <p class="feed-label">LATEST</p>
+              <h3>News topics gaining attention across the day</h3>
+              <p class="feed-meta">Freshness and momentum filters</p>
             </article>
             <article class="feed-card">
-              <p class="feed-label">WIKITRENDS</p>
-              <h3>What people are searching and reading now</h3>
-              <p class="feed-meta">Wikipedia trend snapshots</p>
+              <p class="feed-label">TOPICS</p>
+              <h3>Fast snapshots of what people are reading and discussing</h3>
+              <p class="feed-meta">Topic clusters and headline signals</p>
             </article>
           </div>
         </div>
@@ -97,12 +98,12 @@
 
       <div class="feature-grid">
         <article class="feature-card">
-          <h3>Curated + Real-time</h3>
-          <p>Switch between an editor-curated daily edition and a constantly refreshed trend feed.</p>
+          <h3>Real-time Trends</h3>
+          <p>Track current topics and headline momentum in a feed built for quick signal over noise.</p>
         </article>
         <article class="feature-card">
-          <h3>Breaking Alerts (Pro)</h3>
-          <p>Editorial breaking alerts for the stories worth interrupting your day for.</p>
+          <h3>Automatic Alerts (Pro)</h3>
+          <p>Get automatic notifications when notable trend shifts and breaking topics are detected.</p>
         </article>
         <article class="feature-card">
           <h3>Clean Reading</h3>
@@ -122,7 +123,7 @@
         <p>
           This page can be updated with App Store link, screenshots, and support pages as the app gets closer to launch.
         </p>
-        <a class="btn btn-primary" href="mailto:hello@rivertrends.app?subject=RiverTrends%20launch">Reach out</a>
+        <a class="btn btn-primary" href="mailto:support@rivertrends.com?subject=RiverTrends%20launch">Reach out</a>
       </div>
     </section>
   </main>
@@ -131,7 +132,7 @@
     <p>© <span id="year">2026</span> RiverTrends</p>
     <div class="footer-links">
       <a href="/privacy">Privacy</a>
-      <a href="mailto:hello@rivertrends.app">hello@rivertrends.app</a>
+      <a href="mailto:support@rivertrends.com">support@rivertrends.com</a>
       <a href="https://rivertrends.app/" aria-current="page">rivertrends.app</a>
     </div>
   </footer>
