Switch support email to .app domain

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="./assets/brand-mark.png" alt="" width="36" height="36">
       <span>RiverTrends</span>
     </a>
-    <a class="header-link" href="mailto:support@rivertrends.com">Contact</a>
+    <a class="header-link" href="mailto:support@rivertrends.app">Contact</a>
   </header>
 
   <main>
@@ -43,7 +43,7 @@
         </p>
 
         <div class="cta-row">
-          <a class="btn btn-primary" href="mailto:support@rivertrends.com?subject=RiverTrends%20updates">Get Updates</a>
+          <a class="btn btn-primary" href="mailto:support@rivertrends.app?subject=RiverTrends%20updates">Get Updates</a>
           <span class="btn btn-ghost" aria-disabled="true">App Store Link Soon</span>
         </div>
 
@@ -123,7 +123,7 @@
         <p>
           This page can be updated with App Store link, screenshots, and support pages as the app gets closer to launch.
         </p>
-        <a class="btn btn-primary" href="mailto:support@rivertrends.com?subject=RiverTrends%20launch">Reach out</a>
+        <a class="btn btn-primary" href="mailto:support@rivertrends.app?subject=RiverTrends%20launch">Reach out</a>
       </div>
     </section>
   </main>
@@ -132,7 +132,7 @@
     <p>© <span id="year">2026</span> RiverTrends</p>
     <div class="footer-links">
       <a href="/privacy">Privacy</a>
-      <a href="mailto:support@rivertrends.com">support@rivertrends.com</a>
+      <a href="mailto:support@rivertrends.app">support@rivertrends.app</a>
       <a href="https://rivertrends.app/" aria-current="page">rivertrends.app</a>
     </div>
   </footer>
