--- a/privacy/index.html
+++ b/privacy/index.html
@@ -234,7 +234,7 @@
     </a>
     <nav class="header-links" aria-label="Page links">
       <a href="/">Home</a>
-      <a href="mailto:support@rivertrends.com">Support</a>
+      <a href="mailto:support@rivertrends.app">Support</a>
     </nav>
   </header>
 
@@ -348,7 +348,7 @@
         <h2>11. Contact Us</h2>
         <p>If you have questions about this Privacy Policy, contact us at:</p>
         <div class="contact-box">
-          <a href="mailto:support@rivertrends.com">support@rivertrends.com</a>
+          <a href="mailto:support@rivertrends.app">support@rivertrends.app</a>
         </div>
       </div>
     </article>
@@ -359,7 +359,7 @@
     <div>
       <a href="/">Home</a>
       <span aria-hidden="true"> · </span>
-      <a href="mailto:support@rivertrends.com">Support</a>
+      <a href="mailto:support@rivertrends.app">Support</a>
     </div>
   </footer>
 
