Add support page for App Store review

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
   <footer class="site-footer">
     <p>© <span id="year">2026</span> RiverTrends</p>
     <div class="footer-links">
+      <a href="/support">Support</a>
       <a href="/privacy">Privacy</a>
       <a href="mailto:support@rivertrends.app">support@rivertrends.app</a>
       <a href="https://rivertrends.app/" aria-current="page">rivertrends.app</a>
