--- a/privacy/index.html
+++ b/privacy/index.html
@@ -234,7 +234,7 @@
     </a>
     <nav class="header-links" aria-label="Page links">
       <a href="/">Home</a>
-      <a href="mailto:support@rivertrends.app">Support</a>
+      <a href="/support">Support</a>
     </nav>
   </header>
 
@@ -359,7 +359,7 @@
     <div>
       <a href="/">Home</a>
       <span aria-hidden="true"> · </span>
-      <a href="mailto:support@rivertrends.app">Support</a>
+      <a href="/support">Support</a>
     </div>
   </footer>
 
